# Numstore-Workbench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
assets/blog/: performance_1.txt
performance/big_file_inner_insert/: CMakeLists.txt  big_file_inner_insert.c  big_file_inner_insert.h  gen_data.py  gen_flamegraph.sh  main.c
performance/big_file_inner_insert/results/: trials.csv
performance/big_file_insert/: big_file_inner_insert.c  big_file_inner_insert.py  visualize.py
performance/big_file_insert/results/: output.txt
performance/inner_insert/: CMakeLists.txt
performance/inner_insert/results/: blog.txt  trials.csv
performance/inner_insert/scripts/: bundle_results.sh  gen_flamegraph.sh  run_trials.py  visualize.py
performance/inner_insert/src/: inner_insert.c  inner_insert.h  main.c
